GValueManager and GValue modifications (#3185)
* Modified GValueManager to track pinned gvalues by name only. Added deep cloning to clone method. Added javadoc. Fixed some code style warnings.